Lyra_UI/css/Lyra_UI.css
/* ... */
.side-panel .people-img {
    display: flex;
    justify-content: center;
    background-color: rgb(100, 100, 100) !important;
    width: 150px;
    border-radius: 50%;
    height: 150px;
    z-index: 1;
    margin: 0 24px 0px 28px;
    border: 12px solid var(--color-surface-0);
}
.side-panel .people-img img {
    object-fit: cover;
    width: 100%;
    border-radius: inherit;
    height: 100%;
    object-position: center center !important;
}
.side-panel .social-media {
    gap: 30px;
    margin: 10px 0 8px 0 !important;
}
.side-panel .social-media span {
    display: none;
    font-size: 15px
}

.hamburger {
    background-color: transparent !important;
    height: 55px;
    position: relative;
    top: 0px;
    left: 0px;
    display: none;
    font-size: 16px !important;
}

.hamburger.no-pointer {
    pointer-events: none;
}


.hamburger::before {
    display: none !important;
    opacity: 0;
}
.hamburger.active .equal {
    gap: 0;
}
.hamburger.active .equal .div1 {
    transform: rotate(42deg);
    top: 1px;
    background-color: var(--color-primary-500) !important;
}

.hamburger.active .equal .div2 {
    opacity: 0;
    display: none;
}

.hamburger:not(.active) .equal .div2 {
    animation: fadeInLeft .5s cubic-bezier(0.075, 0.82, 0.165, 1);
}

.hamburger.active .equal .div3 {
    transform: rotate(-43deg);
    background-color: var(--color-primary-100) !important;
}

:root.dark-mode .hamburger {
    background-color: transparent;
}

.equal {
    width: 32px;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    padding: 5px 2px;
    gap: 8px;
    position: relative;
    transform: scale(1.25);
    transition: opacity .3s cubic-bezier(0.075, 0.82, 0.165, 1), transform .5s cubic-bezier(1, 0, 0, 1);
}

.equal div {
    position: relative;
    width: 37px;
    height: 2px;
    top: 0px;
    background-color: black;
    transition: all .4s cubic-bezier(1, 0, 0, 1);
}

.equal .div1 {
    width: 35px;
}
.equal .div2 {
    width: 22px;
}
.hamburger.active .equal div {
    width: 37px !important;
}
.hamburger.active .equal .div1 {
    width: 37px !important;
}

.hamburger span {
    font-size: 2.3rem;
    contain: paint;
    color: #909090;
}

.hamburger.left .equal {
    justify-content: flex-start;
    align-items: flex-start;
}

.hamburger.veggie {
    background-color: transparent;
    border: 2px solid var(--color-primary-900);
    box-shadow: inset rgba(121, 121, 121, 0.1) -2px 2px 3px, inset rgba(160, 160, 160, 0.1) 1px 2px 0px;
    min-width: 90px;
    height: 48px;
    position: relative;
    top: -1px;
    transition: box-shadow .7s cubic-bezier(0.075, 0.82, 0.165, 1);
    margin-left: 0px;
    font-size: 16px !important;
}

.hamburger.veggie.active {
    background-color: var(--color-primary-500) !important;
}

.hamburger.veggie.active .equal div {
    background-color: white;
    transform: rotate(180deg);
}

:root.dark-mode .hamburger.veggie {
    background-color: transparent;
}

.hamburger.veggie:hover {
    box-shadow: inset rgb(39, 39, 39) -100px 0px 5px, inset rgba(160, 160, 160, 0.1) 1px 2px 0px;
}

.hamburger.veggie:hover .equal div {
    background-color: white;
}

.hamburger.veggie:active {
    background-color: white;
}

.hamburger.veggie .equal {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 7px;
    padding: 16px 0;
    position: relative;
    top: -9px
}

.hamburger.veggie .equal div {
    width: 32px;
    height: 3px;
    background-color: #909090;
    transition: all .4s cubic-bezier(0.075, 0.82, 0.165, 1);
}

.hamburger.veggie .hamburger span {
    font-size: 2.3rem;
    contain: paint;
    color: #909090;
}

/* NavPane */
.nav-pane {
    position: fixed;
    inset: 0 0 0 auto;
    width: 360px;
    z-index: 11;
    background-color: var(--color-bg);
}

.nav-pane-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 4px 20px;
    position: sticky;
    top: 0px;
    left: 0px;
    width: 100%;
    right: 0px;   
    z-index: 1;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.nav-pane-header .close-btn {
    padding: 5px 10px 0px 10px;
    min-width: 50px;
    height: 50px;
    top: 10px;
    position: absolute;
    right: 0;
    max-height: auto;
}

.nav-pane hr {
    width: 90%;
    border: 1px dashed rgba(187, 132, 29, 0.308);
}

.nav-container {
    display: flex;
    flex-direction: column;
    gap: 10px;
    position: relative;
    height: 100vh;
}

.menuButton {
    position: relative;
    background-color: transparent;
    border: 1px solid transparent;
    width: 100%;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    font-size: 1.2rem;
    gap: 14px;
    text-align: left;
    padding: 4px 8px 8px 8px;
    border-bottom: 1px solid rgba(100, 100, 100, 0.1);
    color: var(--color-text-main);
    transition: color .2s !important;
    font-family: "JetBrains Mono", sans-serif !important;
    cursor: pointer;
}


.content-item:hover .menuButton  {
    color: rgb(100, 100, 100)
}
.content-item .menuButton:hover {
    color: var(--color-text-main);
}

.menuButton span {
    display: inline-block;
}


.menuButton.flex {
    display: inline-flex;
    justify-content: left;
    align-items: center;
    flex-direction: row;
}

.menuButton.flex select {
    min-width: 100%;
}

.menuButton.flex> :nth-child(1) {
    display: flex;
    align-items: center;
}

.menuButton.flex *> :nth-child(2) {
    margin: 6px auto;
}

.menuButton.flex> :nth-child(2) {
    width: 100%;
}

.menuButton.navigate {
    display: inline-flex;
    color: rgba(125, 125, 125, 0.7);
}

.chevron-right {
    /* width: 9px; height: 9px; border-style: solid; border-width: 0 2px 2px 0; border-bottom-color:#cfcfcf; border-right-color: var(--color-primary-500); transform: rotate(-45deg);  */
    display: inline-block;
    content: '\2192';
}

.navigation-button-list {
    padding: 20px 0 20px 0;
}
/* ... */

